fixed spacing in footer

--- a/resources/css/footer.css
+++ b/resources/css/footer.css
@@ -33,7 +33,7 @@
     height: 16px;
     font-family: "OpenSans-SemiBold";
     font-weight: 700;
-    line-height: 1.1;
+    line-height: 2.8;
     text-align: left;
 }
 
